fix text align on partyRequestForm make deposit button

--- a/src/components/PartyRequestForm/PartyRequestForm.scss
+++ b/src/components/PartyRequestForm/PartyRequestForm.scss
@@ -119,4 +119,9 @@ $CRF-close-bar-height: spacing(18);
       line-height: $font-5;
     }
   }
+
+  &__button {
+    padding-top: calc(#{spacing(4)} + 0.0625rem);
+    padding-bottom: calc(#{spacing(4)} - 0.0625rem);
+  }
 }
